tests/test_files/initialization_inference/move_whole_transient_use_grandpart.stderr
error: access to uninitialized path
- initialization_inference/move_whole_transient_use_grandpart:9:2
9 |   bar.foo.x = 44
  |   ^^^^^^^^^^^^^^
